--- a/src/index.css
+++ b/src/index.css
@@ -32,3 +32,20 @@ a {
   display: flex;
   flex-direction: column;
 }
+
+::-webkit-scrollbar {
+  width: 12px;
+}
+
+::-webkit-scrollbar-track {
+  -webkit-box-shadow: inset 0 0 6px rgba(0,0,0,0.1); 
+  border-radius: 10px;
+}
+
+::-webkit-scrollbar-thumb {
+  border-radius: 10px;
+  background: #cccccc; 
+  -webkit-box-shadow: inset 0 0 1px rgba(0,0,0,0.5); 
+
+
+}
